# eleventa

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_QUICK_REFERENCE.md  COMPREHENSIVE_CODE_REVIEW.md  CONFIGURATION_BUILD_DEPLOYMENT_REVIEW.md  CORE_INFRASTRUCTURE_TEST_PLAN.md  CRITICAL_ISSUES_SUMMARY.md  ERROR_HANDLING_AND_LOGGING_REVIEW.md  Eleventa_setup.iss  LINTING_FIXES_SUMMARY.md  LINTING_REPORT.md  NEXT_STEPS_COMPLETED.md  PERFORMANCE_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  SECURITY_SETUP.md  TESTING.md  TEST_ANALYSIS_REPORT.md  alembic.ini  app_config.json  bandit.toml  cleanup  codecov.yml  collect_code_and_tests.py  collected_files_output.txt  compatibility_layer_summary.md  config.py  conftest.py  copy_files_to_clipboard.py  debug_missing_fields.py  debug_path_test.py  debug_receipt.py  debug_summary.md  department_repository_fix_plan.md  eleventa_clone.db  eleventa_clone.db # Use relative path for now, will be overridden by env.py  eleventa_clone.db.txt  hello_ai.ipynb  (+42 more)
.coverage_data/: .coveragerc
.cursor/: temp.txt
.github/: dependabot.yml
.vercel/: project.json
alembic/: env.py
archived_scripts/: README.txt  create_fixed_test_20250421_131159.py  create_test_20250421_131159.py  fix_script_20250421_131159.py  patch_qt_tests_20250421_131159.py  run_all_tests_20250421_130901.ps1  run_qt_tests_20250421_130901.py  run_specific_test_20250421_130901.py  run_tests_20250421_130901.py  temp_test_cash_drawer_dialogs_20250421_131159.py  test_improvements_20250421_131159.md  test_naming_convention_guide_20250421_131159.md
(+577 files in other folders)
